--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       color: #007BFF;
     }
   </style>
-  <!-- Подключаем рабочий Lightstreamer Client -->
-  <script src="https://cdn.jsdelivr.net/npm/lightstreamer-client@7.3.2/lightstreamer.min.js"></script>
+  <!-- Подключаем UMD-сборку Lightstreamer Client -->
+  <script src="https://unpkg.com/lightstreamer-client-web/lightstreamer.min.js"></script>
 </head>
 <body>
   <div class="container">
@@ -36,11 +36,11 @@
   </div>
 
   <script>
-    // Инициализация Lightstreamer клиента
+    // Инициализация клиента Lightstreamer
     var client = new LightstreamerClient("http://push.lightstreamer.com", "ISS");
     client.connect();
 
-    // Создание подписки на параметр NODE3000005 (заполненность ёмкости для урины)
+    // Создание подписки на параметр NODE3000005
     var subscription = new Subscription("MERGE", "ISS_MET", ["NODE3000005"]);
 
     subscription.addListener({
