--- a/index.html
+++ b/index.html
@@ -42,12 +42,10 @@
   </div>
 
   <script>
-    // Инициализация Lightstreamer клиента.
-    // В Swift‑коде использовался сервер "https://push.lightstreamer.com" и адаптер "ISSLIVE".
-    // Для JS‑клиента используем защищённое WebSocket‑соединение (wss) с завершающим слэшем.
+    // Инициализация клиента с использованием защищённого WebSocket-соединения и завершающего слэша.
     var client = new LightstreamerClient("wss://push.lightstreamer.com/", "ISSLIVE");
 
-    // Добавляем диагностический слушатель для отслеживания статуса клиента.
+    // Диагностический слушатель для отслеживания статуса клиента.
     client.addListener({
       onStatusChange: function(status) {
         console.log("Клиентский статус: " + status);
@@ -57,23 +55,17 @@
       }
     });
 
-    // Устанавливаем соединение.
     client.connect();
 
-    // --- Подписка для обновлений ёмкости (NODE3000005) ---
-    // Поля: "Value", "Status", "TimeStamp"
+    // Подписка для обновлений ёмкости (NODE3000005)
     var pissTankSub = new Subscription("MERGE", ["NODE3000005"], ["Value", "Status", "TimeStamp"]);
     pissTankSub.addListener({
       onSubscribe: function() {
         console.log("Подписка на NODE3000005 началась");
       },
-      onUnsubscribe: function() {
-        console.log("Отписка от NODE3000005");
-      },
       onItemUpdate: function(update) {
-        // Получаем значение из поля "Value"
         var value = update.getValue("Value");
-        console.log("Обновление ёмкости: " + value);
+        console.log("Получено обновление ёмкости: " + value);
         document.getElementById("value").textContent = value + "%";
       },
       onItemLostUpdates: function(itemName, lostUpdates) {
@@ -82,18 +74,15 @@
     });
     client.subscribe(pissTankSub);
 
-    // --- Подписка для обновлений сигнала (TIME_000001) ---
-    // Поля: "TimeStamp", "Status.Class", "Status"
+    // Подписка для обновлений сигнала (TIME_000001)
     var signalSub = new Subscription("MERGE", ["TIME_000001"], ["TimeStamp", "Status.Class", "Status"]);
     signalSub.addListener({
       onSubscribe: function() {
         console.log("Подписка на TIME_000001 началась");
       },
       onItemUpdate: function(update) {
-        // Получаем значение из поля "Status.Class"
         var statusClass = update.getValue("Status.Class");
-        console.log("Обновление сигнала: " + statusClass);
-        // В Swift‑коде сигнал считается активным, если status равен "24"
+        console.log("Получено обновление сигнала: " + statusClass);
         var hasSignal = (statusClass === "24");
         document.getElementById("signal").textContent = "Сигнал: " + (hasSignal ? "есть" : "нет");
       }
